[package]
name = "mlzutil"
description = "Various small utilities used at MLZ"
repository = "https://github.com/birkenfeld/mlzutil"
version = "0.2.0"
license = "MIT/Apache-2.0"
authors = ["Georg Brandl <g.brandl@fz-juelich.de>"]
documentation = "http://docs.rs/mlzutil"
edition = "2018"

[dependencies]
time = "0.1.39"
dns-lookup = "1.0.1"
hostname = "0.3.1"
itertools = "0.10.0"
systemstat = "<=0.1.5"  # 1.41.1
