[package]
name = "mlzutil"
description = "Various small utilities used at MLZ"
repository = "https://github.com/birkenfeld/mlzutil"
version = "0.3.0"
license = "MIT/Apache-2.0"
authors = ["Georg Brandl <g.brandl@fz-juelich.de>"]
documentation = "http://docs.rs/mlzutil"
edition = "2021"

[dependencies]
time = "=0.3.20"  # due to 1.63.0
dns-lookup = "2.0.2"
hostname = "0.3.1"
itertools = "0.10.0"
systemstat = "0.2.3"
