[package]
name = "mlzutil"
description = "Various small utilities used at MLZ"
repository = "https://github.com/birkenfeld/mlzutil"
version = "0.4.0"
license = "MIT/Apache-2.0"
authors = ["Georg Brandl <g.brandl@fz-juelich.de>"]
documentation = "http://docs.rs/mlzutil"
rust-version = "1.63"
edition = "2021"

[dependencies]
chrono = "0.4.38"
dns-lookup = "2.0.2"
hostname = "0.3.1"
itertools = "0.10.0"
systemstat = "0.2.3"
